# sweet-b

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Package.swift  README.md  arm.cmake
.github/workflows/: build-and-test.yml  codeql.yml
.reuse/: dep5
LICENSES/: BSD-3-Clause.txt  LicenseRef-NIST-1.txt
audit/: README.md  audit.md
cavp/: README.md  SigGenComponent.txt
doc/: .gitignore  Doxyfile  Doxyfile-mcss
include/: sb_all.h  sb_hkdf.h  sb_hmac_drbg.h  sb_hmac_sha256.h  sb_sha256.h  sb_sw_context.h  sb_sw_lib.h  sb_types.h
src/: sb_error.h  sb_fe.c  sb_fe.h  sb_fe_armv7.s  sb_fe_tests.c.h  sb_hkdf.c  sb_hmac_drbg.c  sb_hmac_sha256.c  sb_sha256.c  sb_sw_curves.h  sb_sw_lib.c  sb_sw_lib_tests.c.h  sb_test.c  sb_test.h  sb_test_cavp.c  sb_test_cavp.h  sb_test_list.h  sb_time.h
wycheproof/: sb_wycheproof_ecdh_test.c  sb_wycheproof_ecdsa_test.c  sb_wycheproof_hmac_test.c
wycheproof/testvectors/: README.md  ecdh_secp256k1_test  ecdh_secp256r1_test  ecdsa_secp256k1_sha256_test  ecdsa_secp256r1_sha256_test  hmac_sha256_test
